--- a/src/main/resources/sample_mod/lang/all.json
+++ b/src/main/resources/sample_mod/lang/all.json
@@ -3,7 +3,8 @@
     "sample_mod.config.general.title": "General",
     "sample_mod.config.general.tooltip": "This is an example that shows how to create your own config options",
     "sample_mod.config.general.panel": "Register panel",
-    "sample_mod.config.general.panel-comment": "Whether sample mod should register a dashboard panel",
+    "sample_mod.config.general.panel-comment": "Whether sample mod should register a dashboard panel (requires restart)",
+
     "sample_mod.ui.panels.sample.title": "Sample panel",
     "sample_mod.ui.panels.sample.press_me": "Press me!",
     "sample_mod.ui.panels.sample.modal.title": "Modal's title",
